[tool.poetry]
name = "autoderm"
version = "0.0.4"
description = "Autoderm's Official SDK Client."
authors = ["Lucas <lucas@autoderm.ai>"]
readme = "README.md"

[tool.urls]
Homepage = "https://github.com/autodermai/autoderm_sdk"
Issues = "https://github.com/autodermai/autoderm_sdk/issues"

[tool.ruff]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203"]
fixable = ["ALL"]
unfixable = []
line-length = 120


[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["docs", "tests", "examples", "tools", "build"]


[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.9.10"
pydantic = "^2.5.2"
httpx = "^0.25"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"
types-requests = "^2.31.0.10"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

